modified wp-config.php, remove the unvisible character. rename the class name .right-ad to right-advertise because of the bug in chrome 21(a class named right-ad will cause the element invisible).

--- a/wp-content/themes/epachina/styles/home.slider.css
+++ b/wp-content/themes/epachina/styles/home.slider.css
@@ -44,4 +44,4 @@
 #buttonPrev{float:left;width:20px;width:21px; height:110px;background:url(../images/bg.gif) no-repeat 0px -153px; } 
 .cases{margin-bottom:20px; overflow:auto;}
 .cases .case-item{ width:185px; float:left; margin-right:10px;  }
-.cases .right-ad{ width: 500px;float:right;padding:0;}
+.cases .right-advertise{ width: 500px;float:right;padding:0; height: 212px; }
